refactor: change Rails project to Spring Boot